bug fixing / gallery overflow problem on mobile devices

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -241,3 +241,27 @@ background-size: contain;
 img {
 transition: opacity 0.5s ease-in-out;
 }
+
+.lazy-image-placeholder {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.lazy-image-placeholder {
+  opacity: 1;
+  transition: opacity 1.5s ease-in-out;
+	
+}
+
+.lazy-image-loaded {
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+}
+
+.lazy-image-loaded.loaded {
+  opacity: 1;
+}
